Initial commit : setup environment and display script

--- a/Data_engineer.ipynb
+++ b/Data_engineer.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "379b7fa0",
    "metadata": {},
    "outputs": [
@@ -621,14 +621,14 @@
     }
    ],
    "source": [
-    "# Joining flights and airlines\n",
+    "# Merge flights and airlines\n",
     "flights_merged = flights.merge(airlines, left_on='AIRLINE', right_on='IATA_CODE')\n",
     "flights_merged.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9f814694",
    "metadata": {},
    "outputs": [
@@ -847,10 +847,10 @@
     }
    ],
    "source": [
-    "# Renaming AIRLINE_y to AIRLINE\n",
+    "# Rename AIRLINE_y to AIRLINE\n",
     "flights_merged.rename(columns={'AIRLINE_y': 'AIRLINE'}, inplace=True)\n",
     "\n",
-    "# Deleting AIRLINE_x\n",
+    "# Delete AIRLINE_x\n",
     "flights_merged.drop(columns=['AIRLINE_x'], inplace=True)\n",
     "flights_merged.head(5)"
    ]
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e602be8d",
    "metadata": {},
    "outputs": [
@@ -1020,14 +1020,14 @@
     }
    ],
    "source": [
-    "# Converting columns SCHEDULED_DEPARTURE to string\n",
+    "# Converte columns SCHEDULED_DEPARTURE to string\n",
     "flights_merged['SCHEDULED_DEPARTURE'] = flights_merged['SCHEDULED_DEPARTURE'].apply(str)\n",
     "print(flights_merged['SCHEDULED_DEPARTURE'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "54dc8315",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
     }
    ],
    "source": [
-    "# Adding '00' to the rest of the number\n",
+    "# Adde '00' to the rest of the number\n",
     "flights_merged['SCHEDULED_DEPARTURE'] = flights_merged['SCHEDULED_DEPARTURE'].str.zfill(4)\n",
     "flights_merged.head(5)"
    ]
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "84845b75",
    "metadata": {},
    "outputs": [
@@ -1759,25 +1759,25 @@
     }
    ],
    "source": [
-    "# Creating timestamp column\n",
+    "# Create timestamp column\n",
     "flights_merged['TIMESTAMP'] = pd.to_datetime(flights_merged['STR_TIMESTAMP'], format = '%Y-%m-%d' + ' ' + '%H%M')\n",
     "flights_merged.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f87b4f86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deleting columns DATE_STR and STR_TIMESTAMP\n",
+    "# Delete columns DATE_STR and STR_TIMESTAMP\n",
     "flights_merged.drop(columns=['DATE_STR', 'STR_TIMESTAMP'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "383f8439",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1790,7 @@
     }
    ],
    "source": [
-    "# Displaying all columns's name + creating new order of columns\n",
+    "# Display all columns's name + creating new order of columns\n",
     "cols = flights_merged.columns.tolist()\n",
     "new_cols = cols[:4] + cols[-1:] + cols[-2:-1] + cols[4:-2]\n",
     "print(new_cols)"
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "21b01849",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2017,7 @@
     }
    ],
    "source": [
-    "# Creating the clean version\n",
+    "# Create the clean version\n",
     "flights = flights_merged[new_cols]\n",
     "flights.head(5)"
    ]
