Initial commit : setup environment and display script

--- a/Data Engineer/Data_engineer.ipynb
+++ b/Data Engineer/Data_engineer.ipynb
@@ -44,16 +44,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\natha\\AppData\\Local\\Temp\\ipykernel_10096\\690839658.py:2: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  flights = pd.read_csv(\"Dataset/flights.csv\")\n"
+      "C:\\Users\\natha\\AppData\\Local\\Temp\\ipykernel_6392\\2781320412.py:2: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  flights = pd.read_csv(\"../Dataset/flights.csv\")\n"
      ]
     }
    ],
    "source": [
     "# Data Loading\n",
-    "flights = pd.read_csv(\"Dataset/flights.csv\")\n",
-    "airports = pd.read_csv(\"Dataset/airports.csv\")\n",
-    "airlines = pd.read_csv(\"Dataset/airlines.csv\")"
+    "flights = pd.read_csv(\"../Dataset/flights.csv\")\n",
+    "airports = pd.read_csv(\"../Dataset/airports.csv\")\n",
+    "airlines = pd.read_csv(\"../Dataset/airlines.csv\")"
    ]
   },
   {
